Container and header CSS code

--- a/style.css
+++ b/style.css
@@ -10,3 +10,18 @@ body {
     color: #333;
     overflow-x: hidden;
 }
+
+.v-header {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+.container {
+    max-width: 960px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: auto;
+    text-align: center;
+}
