--- a/style.css
+++ b/style.css
@@ -25,3 +25,19 @@ body {
     margin: auto;
     text-align: center;
 }
+
+
+
+.fullscreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.fullscreen-video-wrap video {
+    min-width: 100%;
+    min-height: 100%;
+}
