--- a/style.css
+++ b/style.css
@@ -78,3 +78,19 @@ body {
     padding: 1rem 2rem;
     text-decoration: none;
 }
+
+.section {
+    padding: 20px 0;
+}
+
+.section-b {
+    background: #333;
+    color: #fff;
+}
+
+@media(max-width: 960px) {
+    .container {
+        padding-right: 3rem;
+        padding-left: 3rem;
+    }
+}
