--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0;
+    padding: 0;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1rem;
     line-height: 1.5;
@@ -11,7 +13,7 @@ body {
     overflow-x: hidden;
 }
 
-.v-header {
+.header {
     height: 100vh;
     display: flex;
     align-items: center;
@@ -24,9 +26,7 @@ body {
     padding-right: 1rem;
     margin: auto;
     text-align: center;
-}
-
-
+ }
 
 .fullscreen-video-wrap {
     position: absolute;
@@ -42,16 +42,13 @@ body {
     min-height: 100%;
 }
 
-
-
-
 .header-overlay {
     height: 100vh;
     width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #225470;
+    background-color: #212121;
     z-index: 1;
     opacity: 0.85;
 }
@@ -72,7 +69,7 @@ body {
 }
 
 .btn {
-    background: #34b3a0;
+    background: #546FFF;
     color: white;
     font-size: 1.2rem;
     padding: 1rem 2rem;
@@ -83,14 +80,120 @@ body {
     padding: 20px 0;
 }
 
-.section-b {
+.section-a {
+    height: 100vh;
+    width: 100vw;
     background: #333;
-    color: #fff;
+    color: white;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
+
+.section-b {
+    background: white;
+    color: #333;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.section-c {
+    background: #333;
+    color: white;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.section-d {
+    background: darkblue;
+    color: #fff;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+} 
+
 
 @media(max-width: 960px) {
     .container {
         padding-right: 3rem;
         padding-left: 3rem;
     }
+}
+
+.loader-bg{
+    position: fixed;
+    z-index: 999999;
+    background: #212121;
+    width: 100%;
+    height: 100%;
+}
+
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loader .dots {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin: 10px;
+    display: inline-block;
+    background-color: white;
+    transform: scale(0.2);
+    animation: anim 1.2s infinite;
+}
+
+.dots:nth-child(2){
+    animation-delay: 0.2s;
+}
+
+.dots:nth-child(3){
+    animation-delay: 0.4s;
+}
+
+.dots:nth-child(4){
+    animation-delay: 0.8s;
+}
+
+.dots:nth-child(5){
+    animation-delay: 1s;
+}
+
+.dots:nth-child(6 ){
+    animation-delay: 1.2s;
+}
+
+@keyframes anim {
+    0%, 100% {
+        transform: scale(0.2s);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+}
+
+.gotopbtn {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+    background: #546FFF;
+    bottom: 40px;
+    right: 50px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 22px;
 }
