--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav {
 }
 
 .section-c {
-    background: #333;
+    background: #212121;
     color: white;
     height: 100vh;
     width: 100vw;
@@ -139,7 +139,7 @@ nav {
     z-index: 1;
 }
 .section-d {
-    background: darkblue;
+    background: #333;
     color: #fff;
     height: 100vh;
     width: 100vw;
@@ -227,45 +227,136 @@ nav {
     font-size: 22px;
 }
 
-main {
-    /* position: fixed; */
-    top: 0; 
-    left: 0;
-    width: 100%;
-    height: 100vh;
-}
-
-.slider {
+ul {
     position: absolute;
-    /* top: 0; */
-    left: 0;
-    width: 2800px;
-    height: 100%;
-}
-
-.slider-inner {
-    position: absolute;
-    top: 15%;
-    height: 70%;
-    width: 100%;
+    top: 445%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    justify-content: space-around;
+    margin: 0;
+    padding: 0;
 }
 
-.item {
-    position: relative;
-    width: 400px;
-    height: 100%;
-    overflow: hidden;
-    background-color: red;
+ul li {
+    list-style: none;
+    margin:  0 7px;
 }
 
-.img {
+ul li a .fa {
+    line-height: 80px;
+    color: #262626;
+    transition: 0.5s;
+    font-size: 40px;
+    padding-right: 15px;
+}
+
+ul li a span {
     position: absolute;
-    left: -100px;
-    width: 600px;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
+    top: 30px;
+    color: #262626;
+    letter-spacing: 4px;
+    padding: 0;
+    margin: 0;
+    transition: 0.5s;
+}
 
+ul li a {
+    text-decoration: none;
+    display: block;
+    width: 210px;
+    height: 80px;
+    text-align: left;
+    background: #f2f2f2;
+    padding-left: 20px;
+    transform: rotate(-30deg) skew(25deg) translate(0,0);
+    box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
+    transition: 0.5s;
+}
+
+ul li a::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: -20px;
+    height: 100%;
+    width: 20px;
+    background: #b1b1b1; 
+    transform: rotate(0deg) skewY(-45deg);
+    transition: 0.5s;  
+} 
+
+ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: -20px;
+    left: -10px;
+    height: 20px;
+    width: 100%;
+    background: #b1b1b1;
+    transform: rotate(0deg) skewX(-45deg);
+    transition: 0.5s;
+}
+
+ul li a:hover {
+    transform:  rotate(-30deg) skew(25deg) translate(20px, -15px);
+    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
+} 
+
+ul li:hover .fa {
+    color: #fff;
+}
+
+ul li:hover span {
+    color: #fff;
+}
+
+ul li:hover:nth-child(1) a {
+    background: #171515;
+}
+
+ul li:hover:nth-child(1) a:before {
+    background: #171515;
+}
+
+ul li:hover:nth-child(1) a:after {
+    background: #171515;
+}
+
+
+ul li:hover:nth-child(2) a {
+    background: #833AB4;
+}
+
+ul li:hover:nth-child(2) a::before {
+    background: #833AB4;
+}
+
+ul li:hover:nth-child(2) a:after {
+    background: #833AB4;
+}
+
+
+ul li:hover:nth-child(3) a {
+    background: #dd4b39;
+}
+
+ul li:hover:nth-child(3) a::before {
+    background: #b33a2b;
+}
+
+ul li:hover:nth-child(3) a:after {
+    background: #e66a5a;
+}
+
+
+ul li:hover:nth-child(4) a {
+    background: #2867B2;;
+}
+
+ul li:hover:nth-child(4) a::before {
+    background: #2867B2;;
+}
+
+ul li:hover:nth-child(4) a:after {
+    background: #2867B2;;
 }
