--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav {
 .menu a {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .header {
@@ -87,12 +87,12 @@ nav {
 }
 
 .header-content h1 {
-    font-size: 50px;
+    font-size: 42px;
     margin-bottom: 0;
 }
 
 .header-content p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     display: block;
     padding-bottom: 2rem;
 }
@@ -101,8 +101,9 @@ nav {
     background: #546FFF;
     color: white;
     font-size: 1.2rem;
-    padding: 1rem 2rem;
+    padding: 0.8rem 1.8rem;
     text-decoration: none;
+    border-radius: 5px;
 }
 
 .section {
@@ -269,7 +270,7 @@ ul li a {
     background: #f2f2f2;
     padding-left: 20px;
     transform: rotate(-30deg) skew(25deg) translate(0,0);
-    box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
+    /* box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5); */
     transition: 0.5s;
 }
 
