--- a/style.css
+++ b/style.css
@@ -140,6 +140,16 @@ nav {
     z-index: 1;
 }
 .section-d {
+    background: white;
+    color: #333;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.section-e {
     background: #333;
     color: #fff;
     height: 100vh;
@@ -148,6 +158,8 @@ nav {
     left: 0;
     z-index: 1;
 } 
+
+
 
 
 @media(max-width: 960px) {
@@ -230,7 +242,7 @@ nav {
 
 ul {
     position: absolute;
-    top: 445%;
+    top: 545%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
