--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ nav {
 .section-a {
     height: 100vh;
     width: 100vw;
-    background: white;
-    color: #333;
+    background: #333;
+    color: white;
     top: 0;
     left: 0;
     z-index: 1;
@@ -145,10 +145,11 @@ nav {
     top: 0;
     left: 0;
     z-index: 1;
+    overflow-y: scroll;
 }
 
 .section-c {
-    background: #212121;
+    background: #333;
     color: white;
     height: 100vh;
     width: 100vw;
@@ -167,8 +168,8 @@ nav {
 }
 
 .section-d {
-    background: white;
-    color: #333;
+    background: #333;
+    color: #fff;
     height: 100vh;
     width: 100vw;
     top: 0;
@@ -191,37 +192,38 @@ nav {
     justify-content: space-around;
     width: 75%;
     position: absolute;
-    color: red;
+    color: white;
+    font-size: 200px;
 }
 
 .circle-1 {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 350px;
     height: 350px;
-    background-color: white;
-    border-radius: 50%;
+    background-color: #212121;
+    border-radius: 50%; 
+    box-shadow: black 5px 5px 5px;
 }
 
 .circle-2 {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 350px;
     height: 350px;
-    background-color: white;
+    background-color: #212121;
     border-radius: 50%;
+    box-shadow: black 5px 5px 5px;
 }
 
 .circle-3 {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 350px;
     height: 350px;
-    background-color: white;
+    background-color: #212121;
     border-radius: 50%;
+    box-shadow: black 5px 5px 5px;
 }
 
 .socials-title {
