--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     scroll-behavior: smooth;
 }
 
+html:not([data-scroll='0']) .openMenu {
+    right: 40px;
+  }
+
 body {
     margin: 0;
     padding: 0;
@@ -11,6 +15,7 @@ body {
     line-height: 1.5;
     color: #333;
     overflow: hidden;
+    
 }
 
 
@@ -32,7 +37,7 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 75%;
-    margin-right: -155px;
+    margin-right: -100px;
 }
 
 .menu a {
@@ -56,8 +61,8 @@ nav .menu .closeMenu , .icons i {
     cursor: pointer;
     margin-top: 30px;
 }
-.fa-facebook:hover {color: rgb(0, 110, 255);}
-.fa-twitter:hover {color: rgb(86, 154, 243);}
+.fa-linkedin:hover {color: rgb(86, 154, 243);}
+.fa-youtube:hover {color: rgb(255 0 0);}
 .fa-instagram:hover {color: rgb(255, 0, 191);}
 .fa-github:hover {color: rgb(255, 123, 0);}
 
@@ -141,6 +146,85 @@ nav .menu .closeMenu , .icons i {
 
 /* Header einde */
 
+.project-tile {
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+    aspect-ratio: 16/9;
+    box-shadow: 2px 2px 5px black;
+    border: 1px solid black;
+    transition: 0.3s ease-in-out;
+  }
+  .project-tile img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .project-desc {
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    opacity: 0;
+    background-color: black;
+    font-size: 20px;
+    padding: 5%;
+    width: 100%;
+    height: 100%;
+    color: white;
+    transition: 0.5s ease-in-out;
+  }
+  
+  .project-tile:hover .project-desc {
+    opacity: 0.8;
+    z-index: 2;
+  }
+  
+  .card-container {
+    display: flex;
+    justify-content: center;
+    max-width: 1920px;
+    flex-wrap: wrap;
+    margin: 130px auto;
+    gap: 50px;
+  /*   border: 1px solid red; */
+  }
+  
+  .project-tile:hover {
+    box-shadow: 5px 5px 10px black;
+    transform: scale(1.05);
+  }
+  
+  .view-project-button {
+    border-radius: 5px;
+    color: white;
+    border: 2px solid white;
+    width: relative;
+    font-size: 15px;
+    height: auto;
+    padding: 7px;
+    margin: 0 auto;
+    transition: 0.5s ease-in-out;
+    text-decoration: none;
+  }
+  
+  .view-project-button:hover{
+    background-color: white;
+    color: black !important;
+    text-decoration: none;
+  }
+  /* project-section changed to projects */
+  #projects > .text-wrapper {
+    margin: 0 auto;
+    text-align: left; /* DONT FORGET THIS */
+  }
+
+  
 
 /* Sections */
 
@@ -156,6 +240,11 @@ nav .menu .closeMenu , .icons i {
     top: 0;
     left: 0;
     z-index: 1;
+    overflow: auto;
+}
+
+.section-a .container p, h3{
+    text-align: left;
 }
 
 .section-b {
@@ -166,7 +255,7 @@ nav .menu .closeMenu , .icons i {
     top: 0;
     left: 0;
     z-index: 1;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 .section-c {
@@ -180,6 +269,7 @@ nav .menu .closeMenu , .icons i {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .title-skill {
@@ -196,16 +286,18 @@ nav .menu .closeMenu , .icons i {
     top: 0;
     left: 0;
     z-index: 1;
+    overflow: auto;
 }
 
 .section-e {
     background: #333;
     color: #fff;
-    height: 100vh;
+    height: 110vh;
     width: 100vw;
     top: 0;
     left: 0;
     z-index: 1;
+    overflow: auto;  
 } 
 
 .circles {
@@ -252,7 +344,7 @@ nav .menu .closeMenu , .icons i {
     justify-content: center;
     font-size: 40px;
     font-weight: 100;
-    margin-top: 130px;
+    margin-top: 120px;
 }
 
 /* Sections einde */
@@ -338,144 +430,101 @@ nav .menu .closeMenu , .icons i {
 
 /* Go to top button einde */
 
-
-/* Social media tab */
-
-ul {
-    position: absolute;
-    top: 545%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-ul li {
+.container-form{
+    max-width:1170px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:1em;
+    color:#485e74;
+  }
+  
+  ul{
     list-style: none;
-    margin:  0 7px;
-}
-
-ul li a .fa {
-    line-height: 80px;
-    color: #262626;
-    transition: 0.5s;
-    font-size: 40px;
-    padding-right: 15px;
-}
-
-ul li a span {
-    position: absolute;
-    top: 30px;
-    color: #262626;
-    letter-spacing: 4px;
-    padding: 0;
-    margin: 0;
-    transition: 0.5s;
-}
-
-ul li a {
-    text-decoration: none;
-    display: block;
-    width: 210px;
-    height: 80px;
-    text-align: left;
-    background: #f2f2f2;
-    padding-left: 20px;
-    transform: rotate(-30deg) skew(25deg) translate(0,0);
-    /* box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5); */
-    transition: 0.5s;
-}
-
-ul li a::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background: #b1b1b1; 
-    transform: rotate(0deg) skewY(-45deg);
-    transition: 0.5s;  
-} 
-
-ul li a::after {
-    content: '';
-    position: absolute;
-    bottom: -20px;
-    left: -10px;
-    height: 20px;
-    width: 100%;
-    background: #b1b1b1;
-    transform: rotate(0deg) skewX(-45deg);
-    transition: 0.5s;
-}
-
-ul li a:hover {
-    transform:  rotate(-30deg) skew(25deg) translate(20px, -15px);
-    box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
-} 
-
-ul li:hover .fa {
-    color: #fff;
-}
-
-ul li:hover span {
-    color: #fff;
-}
-
-ul li:hover:nth-child(1) a {
-    background: #171515;
-}
-
-ul li:hover:nth-child(1) a:before {
-    background: #171515;
-}
-
-ul li:hover:nth-child(1) a:after {
-    background: #171515;
-}
-
-
-ul li:hover:nth-child(2) a {
-    background: #833AB4;
-}
-
-ul li:hover:nth-child(2) a::before {
-    background: #833AB4;
-}
-
-ul li:hover:nth-child(2) a:after {
-    background: #833AB4;
-}
-
-
-ul li:hover:nth-child(3) a {
-    background: #dd4b39;
-}
-
-ul li:hover:nth-child(3) a::before {
-    background: #b33a2b;
-}
-
-ul li:hover:nth-child(3) a:after {
-    background: #e66a5a;
-}
-
-
-ul li:hover:nth-child(4) a {
-    background: #2867B2;;
-}
-
-ul li:hover:nth-child(4) a::before {
-    background: #2867B2;;
-}
-
-ul li:hover:nth-child(4) a:after {
-    background: #2867B2;;
-}
-
-/* Social media tab einde */
+    padding:0;
+  }
+  
+  .brand{
+    text-align: center;
+  }
+  
+  .brand span{
+    color:#fff;
+  }
+  
+  .wrapper{
+    box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
+  }
+  
+  .wrapper > *{
+    padding: 1em;
+  }
+  
+  .company-info{
+    background:#212121;
+  }
+  
+  .company-info h3, .company-info ul{
+    text-align: center;
+    margin:0 0 1rem 0;
+  }
+  
+  .contact{
+    background: grey;
+  }
+  
+  /* FORM STYLES */
+  .contact form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap:20px;
+  }
+  
+  .contact form label{
+    display:block;
+  }
+  
+  .contact form p{
+    margin:0;
+  }
+  
+  .contact form .full{
+    grid-column: 1 / 3;
+  }
+  
+  .contact form button, .contact form input, .contact form textarea{
+    width:100%;
+    padding:1em;
+    border:1px solid #c9e6ff;
+  }
+  
+  .contact form button{
+    background:#c9e6ff;
+    border:0;
+    text-transform: uppercase;
+  }
+  
+  .contact form button:hover,.contact form button:focus{
+    background:#92bde7;
+    color:#fff;
+    outline:0;
+    transition: background-color 2s ease-out;
+  }
+  
+  /* LARGE SCREENS */
+  @media(min-width:700px){
+    .wrapper{
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+    }
+  
+    .wrapper > *{
+      padding:2em;
+    }
+  
+    .company-info h3, .company-info ul, .brand{
+      text-align: left;
+    }
+  }
 
 
 /* Media querries */
@@ -487,7 +536,25 @@ ul li:hover:nth-child(4) a:after {
     }
 }
 
-@media(max-width: 800px){
+@media(min-width: 1180px){
+    .socials-title {
+        margin-top: 70px;
+    }
+}
+
+@media(max-width: 1180px){
+
+    ul {
+       flex-direction: column;
+       top: 455%;
+       display: flex;
+       gap: 50px;
+    }
+
+    .socials-title {
+        margin-top: 40px;
+    }
+
     nav .menu {
         height: 100vh;
         position: fixed;
@@ -499,9 +566,18 @@ ul li:hover:nth-child(4) a:after {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: #000;
+        background: black;
+        opacity: 97%;
         transition: top 1s ease;
         display: none;
+    }
+
+    .header-content h1 {
+        font-size: 32px;
+    }
+    
+    .header-content p {
+        font-size: 1rem;
     }
 
     .gotopbtn {
@@ -525,6 +601,7 @@ ul li:hover:nth-child(4) a:after {
     }
     nav .openMenu {
         display: block;
+       
     }
     nav .menu li a:hover {
         background: none;
@@ -534,6 +611,26 @@ ul li:hover:nth-child(4) a:after {
     .icons i {
         display: inline-block;
         padding: 12px;
+    }
+
+    .section-a .container {
+        margin-top: 120px;
+    }
+
+    .section-b .container {
+        margin-top: 120px;
+    }
+
+    .section-c .container {
+        margin-top: 120px;
+    }
+
+    .section-d .container {
+        margin-top: 120px;
+    }
+
+    .section-e .container {
+        margin-top: 120px;
     }
 }
 /* Media querries einde */
