--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ body {
     line-height: 1.5;
     color: #333;
     overflow: hidden;
-    
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 
@@ -48,7 +52,7 @@ nav {
 
 nav .openMenu {
     font-size: 2.5rem;
-    margin: 20px;
+    margin-top: px;
     display: none;
     cursor: pointer;
     color: white;
@@ -61,6 +65,13 @@ nav .menu .closeMenu , .icons i {
     cursor: pointer;
     margin-top: 30px;
 }
+
+nav .menu .closeMenu , .home {
+    color: white;
+    display: none;
+    cursor: pointer;
+}
+
 .fa-linkedin:hover {color: rgb(86, 154, 243);}
 .fa-youtube:hover {color: rgb(255 0 0);}
 .fa-instagram:hover {color: rgb(255, 0, 191);}
@@ -298,6 +309,7 @@ nav .menu .closeMenu , .icons i {
     left: 0;
     z-index: 1;
     overflow: auto;  
+    padding-bottom: 100px;
 } 
 
 .circles {
@@ -435,24 +447,21 @@ nav .menu .closeMenu , .icons i {
     margin-left:auto;
     margin-right:auto;
     padding:1em;
-    color:#485e74;
+    color: white;
+    margin-top: 80px;
   }
   
-  ul{
+  ul {
     list-style: none;
     padding:0;
-  }
-  
-  .brand{
-    text-align: center;
-  }
-  
-  .brand span{
-    color:#fff;
+    flex-direction: column;
+    top: 455%;
+    display: flex;
+    gap: 50px;
   }
   
   .wrapper{
-    box-shadow: 0 0 20px 0 rgba(72,94,116,0.7);
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.7);
   }
   
   .wrapper > *{
@@ -469,7 +478,7 @@ nav .menu .closeMenu , .icons i {
   }
   
   .contact{
-    background: grey;
+    background: #333;
   }
   
   /* FORM STYLES */
@@ -498,13 +507,13 @@ nav .menu .closeMenu , .icons i {
   }
   
   .contact form button{
-    background:#c9e6ff;
+  
     border:0;
-    text-transform: uppercase;
+    
   }
   
   .contact form button:hover,.contact form button:focus{
-    background:#92bde7;
+    background:#212121;
     color:#fff;
     outline:0;
     transition: background-color 2s ease-out;
@@ -536,12 +545,6 @@ nav .menu .closeMenu , .icons i {
     }
 }
 
-@media(min-width: 1180px){
-    .socials-title {
-        margin-top: 70px;
-    }
-}
-
 @media(max-width: 1180px){
 
     ul {
@@ -549,10 +552,6 @@ nav .menu .closeMenu , .icons i {
        top: 455%;
        display: flex;
        gap: 50px;
-    }
-
-    .socials-title {
-        margin-top: 40px;
     }
 
     nav .menu {
@@ -613,6 +612,10 @@ nav .menu .closeMenu , .icons i {
         padding: 12px;
     }
 
+    .home {
+        display: inline-block;
+    }
+
     .section-a .container {
         margin-top: 120px;
     }
@@ -635,3 +638,97 @@ nav .menu .closeMenu , .icons i {
 }
 /* Media querries einde */
 
+.about {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about .content img{
+    height: auto;
+    width: 600px;
+    max-width: 100%;
+}
+
+.text {
+    width: 550px;
+    max-width: 100%;
+    padding: 0 10px;
+}
+
+.content {
+    width: 1280px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.text h1 {
+    color: #ffcc74;
+    font-size: 85px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.text h5 {
+    color: white;
+    font-size: 25px;
+    margin-bottom: 25px;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+
+.text p {
+    color: #c0c4d8;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    margin-bottom: 45px;
+}
+
+button {
+    background-color: #ffcc74;
+    color: black;
+    border: 2px solid transparent;
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 30px;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+button:hover {
+    transform: scale(1.2);
+    background-color: transparent;
+    border: 2px solid #ffcc74;
+    color: #ffcc74;
+    transition: .4s;
+    cursor: pointer;
+}
+
+
+
+@media screen and (max-width: 1180px) {
+    .about {
+        width: 100%;
+        height: auto;
+        padding: 70px 0px;
+    }
+
+    .about img {
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .text h1 {
+        font-size: 60px;
+        margin-bottom: 25px;
+    }
+}
+    
