--- a/Code/style.css
+++ b/Code/style.css
@@ -23,12 +23,13 @@ body {
     align-items: center;
     background-color: transparent;
     color: white;
+    float: right;
 }
   
 .navbar li {
     list-style: none;
     z-index: 99;
-    padding: 1.6rem;
+    padding: 1.8rem;
 }
 
 .navbar a {
@@ -69,6 +70,7 @@ h1 span {
 .header-content h1 {
     font-size: 60px;
     text-align: center;
+    position: absolute;
 }
 
 .header-content p {
@@ -216,8 +218,8 @@ h1 span {
 
 @media (max-width: 600px) {
 
-    .navbar-links {
-        width: 90%;
+    .navbar {
+     margin-right: 350px;
     }
 
 
