--- a/Code/style.css
+++ b/Code/style.css
@@ -17,113 +17,32 @@ body {
 
 /* Nav */
 
-#navigation {
-  z-index: 100;
-  display: flex;
-  justify-content: center;
+.navbar ul {
+    display: flex;
+    max-width: 95%;
+    align-items: center;
+    background-color: transparent;
+    color: white;
+    float: right;
+}
+  
+.navbar li {
+    list-style: none;
+    z-index: 99;
+    padding: 1.8rem;
 }
 
-#menu {
-  width: 35px;
-  height: 30px;
-  margin: 30px 0 20px 20px;
-  z-index: 100;
-  cursor: pointer;
+.navbar a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
 }
 
-#menu .bar {
-  z-index: 100;
-}
-
-.bar {
-  height: 5px;
-  width: 100%;
-  z-index: 100;
-  background-color: white;
-  display: block;
-  border-radius: 5px;
-  transition:0.3s ease;
-}
-
-#bar1 {
-  transform: translateY(-4px);
-  z-index: 100;
-}
-
-#bar3 {
-  transform: translateY(4px);
-  z-index: 100;
-}
-
-.nav li a {
-  color: white;
-  text-decoration: none;
-  z-index: 100;
-}
-
-.nav a {
-  color: white;
-  z-index: 100;
-}
-
-.nav li a:hover {
-  border: 1px solid white;
-}
-
-.nav li {
-  z-index: 100;
-  list-style: none;
-  padding: 16px 0;
-}
-
-.nav {
-  z-index: 100;
-  padding: 0;
-  margin: 0 20px;
-  transition: 1s ease;
-  display: none;
-}
-
-.icon .bar {
-  background-color: white;
-  z-index: 100;
-}
-
-.icon #bar1 {
-  transform: translateY(4px) rotate(-45deg);
-  z-index: 100;
-}
-
-.icon #bar3 {
-  transform: translateY(-6px) rotate(45deg);
-  z-index: 100;
-}
-
-.icon #bar2 {
-  opacity: 0;
-  z-index: 100;
-}
-
-.change {
-  background-color: #212121;
-  height: 100vh;
-  margin: 0;
-  position: absolute;
-  font-size: 30px;
-  overflow: hidden;
-  top: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-@media only screen and (max-width: 500px) {
-  .change {
-    width: 100%;
-  }
+.navbar-logo {
+    flex: 1;
+    font-size: 1.5rem;
+    color: transparent;
+    user-select: none;
 }
 
 /* Nav einde */
@@ -136,7 +55,6 @@ body {
     display: flex;
     align-items: center;
     color: #fff;
-    z-index: -100;
 }
 
 
@@ -165,7 +83,6 @@ h1 span {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -100;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -174,7 +91,6 @@ h1 span {
 .fullscreen-video-wrap video {
     min-width: 100%;
     min-height: 100%;
-    z-index: -100;
 }
 
 .header-overlay {
@@ -184,7 +100,7 @@ h1 span {
     top: 0;
     left: 0;
     background-color: #000000;
-    z-index: -100;
+    z-index: 1;
     opacity: 0.98;
 }
 
@@ -302,9 +218,16 @@ h1 span {
 
 @media (max-width: 600px) {
 
+
+  .navbar-links {
+    display: none;
+  }
+
     .header-content h1 {
         font-size: 45px;
-        margin-left: 110px;
+        position: relative;
+        margin-top: 260px;
+        margin-right: -60px;
     }
 }
 
