--- a/Code/Css/projects.css
+++ b/Code/Css/projects.css
@@ -1,4 +1,204 @@
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: green;
+}
+
+/* Nav */
+
+.menu_overlay {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  overflow: hidden;
+  color: #fff;
+  z-index: 100;
+  transform: translateY(-100%);
+  transition: transform 0.5s ease;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list {
+  height: 40%;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 40%;
+  position: relative;
+  list-style: none;
+}
+
+.list li {
+  height: 50%;
+  width: 50%;
+  padding: 4px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease;
+}
+
+.list li:nth-child(1) {
+  top: 0;
+  left: 0;
+  background-color: #212121;
+}
+
+.list li:nth-child(2) {
+  bottom: 0;
+  left: 0;
+  background-color: rgb(255, 102, 0);
+}
+
+.list li:nth-child(3) {
+  top: 0;
+  right: 0;
+  background-color: rgb(255, 102, 0);
+}
+
+.list li:nth-child(4) {
+  bottom: 0;
+  right: 0;
+  background-color: #212121;
+}
+
+.list li:nth-child(1):hover,
+.list li:nth-child(2):hover {
+  z-index: 1;
+  animation: bounce 2s ease infinite;
+}
+
+.list li:nth-child(3):hover,
+.list li:nth-child(4):hover {
+  z-index: 1;
+  animation: bounce2 2s ease infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1) rotate(10deg);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1) rotate(10deg);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bounce2 {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1) rotate(-10deg);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1) rotate(-10deg);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.list a {
+  font-size: 1.35rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+.menu_overlay .fas {
+  position: absolute;
+  right: 20px;
+  padding: 20px;
+  top: 20px;
+  font-size: 2.5rem;
+  transition: all 0.3s ease;
+  z-index: 100;
+}
+.menu_overlay .fas:hover {
+  color: rgb(255, 102, 0);
+  transform: scale(1.1) rotate(180deg);
+}
+
+#menuBtn {
+  display: none;
+}
+
+.landing_page {
+  max-height: 100vh;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.menu {
+  position: absolute;
+  right: 20px;
+  padding: 20px;
+  top: 20px;
+  z-index: 99;
+}
+
+.fas {
+  font-size: 2.4rem;
+  color: white;
+}
+
+.fas:hover {
+  color: rgb(255, 102, 0);
+}
+
+
+@media screen and (max-width: 750px) and (min-width: 651px) {
+  .list li a {
+    font-size: 1.4rem;
+  }
+
+  .list {
+    height: 30%;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .list li {
+    margin-bottom: 10px;
+    position: relative;
+  }
+
+  .list a {
+    font-size: 1.4rem;
+  }
+}
+
+/* Nav einde */
+
+
 .project-tile {
     position: relative;
     width: 100%;
