--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -24,6 +24,10 @@ body {
   overflow: hidden;
   color: #fff;
   z-index: 100;
+  position: fixed;
+
+  /* Position relative wanneer onder bepaalde pixels */
+  
   transform: translateY(-100%);
   transition: transform 0.5s ease;
   background: #000;
@@ -34,6 +38,7 @@ body {
 
 .list {
   height: 40%;
+  font-family: Arial, Helvetica, sans-serif;
   width: 40%;
   position: relative;
   list-style: none;
@@ -42,7 +47,7 @@ body {
 .list li {
   height: 50%;
   width: 50%;
-  padding: 10px;
+  padding: 4px;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -53,25 +58,25 @@ body {
 .list li:nth-child(1) {
   top: 0;
   left: 0;
-  background-color: #4b134f;
+  background-color: #212121;
 }
 
 .list li:nth-child(2) {
   bottom: 0;
   left: 0;
-  background-color: #c94b4b;
+  background-color: rgb(255, 102, 0);
 }
 
 .list li:nth-child(3) {
   top: 0;
   right: 0;
-  background-color: #f7971e;
+  background-color: rgb(255, 102, 0);
 }
 
 .list li:nth-child(4) {
   bottom: 0;
   right: 0;
-  background-color: slateblue;
+  background-color: #212121;
 }
 
 .list li:nth-child(1):hover,
@@ -123,7 +128,7 @@ body {
 }
 
 .list a {
-  font-size: 1.6rem;
+  font-size: 1.35rem;
   text-decoration: none;
   color: #fff;
 }
@@ -157,6 +162,7 @@ body {
   position: absolute;
   right: 20px;
   padding: 20px;
+  position: fixed;
   top: 20px;
   z-index: 99;
 }
@@ -291,6 +297,15 @@ h1 span {
     justify-content: center;
 }
 
+.section-c {
+  height: 100vh;
+  width: 100vw;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  z-index: -1;
+  background-color: darkslategrey;
+}
+
 /* Sections einde */
 
 
@@ -299,7 +314,8 @@ h1 span {
 .gotopbtn .fa-arrow-up{
     position: fixed;
     width: 50px;
-    height: 50px;
+    height: 50px; 
+    border-radius: 50%;
     z-index: 2;
     bottom: 40px;
     right: 50px;
