--- a/Code/Css/style.css
+++ b/Code/Css/style.css
@@ -4,12 +4,13 @@
 
 * {
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
+    background-color: rgb(30,30,40);
     font-size: 1rem;
     color: #333;
     overflow-x: hidden;
@@ -30,6 +31,7 @@ body {
 
 .menu_overlay {
   width: 100vw;
+  font-family: 'Poppins', sans-serif;
   height: 100vh;
   position: absolute;
   overflow: hidden;
@@ -65,13 +67,12 @@ body {
   justify-content: center;
   align-items: center;
   transition: all 0.4s ease;
-  /*jamie is een homo die houdt van ballen*/
 }
 
 .list li:nth-child(1) {
   top: 0;
   left: 0;
-  background-color: #212121;
+  background-color: #333;
 }
 
 .list li:nth-child(2) {
@@ -83,7 +84,7 @@ body {
 .list li:nth-child(3) {
   top: 0;
   right: 0;
-  background-color: #212121;
+  background-color: #333;
 }
 
 .list li:nth-child(4) {
@@ -149,13 +150,13 @@ body {
 .menu_overlay .fas {
   position: absolute;
   right: 40px;
-  top: 40px;
+   top: 40px;
   font-size: 2.5rem;
   transition: all 0.3s ease;
   z-index: 100;
 }
 .menu_overlay .fas:hover {
-  color: #4b134f;
+  color: rgb(255, 102, 0);
   transform: scale(1.1) rotate(180deg);
 }
 
@@ -181,6 +182,7 @@ body {
 
 .fas {
   font-size: 2.4rem;
+  z-index: 99;
   color: white;
 }
 
@@ -217,6 +219,7 @@ body {
     font-size: 1.4rem;
   }
 }
+
 /* Nav einde */
 
 
@@ -274,7 +277,7 @@ h1 span {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #000000;
+    background-color: #333;
     z-index: 1;
     opacity: 0.8;
 }
@@ -290,7 +293,7 @@ h1 span {
     font-family: 'Poppins', sans-serif;
     color: white;
     z-index: -1;
-    background-color: black;
+    background-color: #212121;
 }
 
 .section-b {
@@ -299,7 +302,7 @@ h1 span {
     font-family: 'Poppins', sans-serif;
     color: white;
     z-index: -1;
-    background-color: black;
+    background-color: #212121;
 }
 
 .section-b .container {
@@ -313,7 +316,7 @@ h1 span {
   font-family: 'Poppins', sans-serif;
   color: white;
   z-index: -1;
-  background-color: black;
+  background-color: #212121;
   display: flex;
   justify-content: center;
 }
@@ -435,7 +438,7 @@ button:hover {
 
 .hero-section{
   align-items: flex-start;
-  background-color: black;
+  background-color: #212121;
   display: flex;
   min-height: 100%;
   justify-content: center;
@@ -637,70 +640,10 @@ button:hover {
   .progress-line.mysql span::after{
     content: "40%";
   }
-  
-
-  /* Contact form */
-
-  form { 
-    max-width:420px; 
-    margin:50px auto; 
-    position: absolute;
-    top: 345%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-
-  .feedback-input {
-    color:white;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight:500;
-    font-size: 18px;
-    border-radius: 5px;
-    line-height: 22px;
-    background-color: transparent;
-    border:2px solid rgb(255, 102, 0);
-    transition: all 0.3s;
-    padding: 13px;
-    margin-bottom: 15px;
-    width:100%;
-    box-sizing: border-box;
-    outline:0;
-  }
-  
-  .feedback-input:focus { border:2px solid #CC4949; }
-  
-  textarea {
-    height: 150px;
-    line-height: 150%;
-    resize:vertical;
-  }
-  
-  [type="submit"] {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    width: 100%;
-    background:rgb(255, 102, 0);;
-    border-radius:5px;
-    border:0;
-    cursor:pointer;
-    color:white;
-    font-size:24px;
-    padding-top:10px;
-    padding-bottom:10px;
-    transition: all 0.3s;
-    margin-top:-4px;
-    font-weight:700;
-  }
-  [type="submit"]:hover { background:rgb(255, 102, 0); }
-
-  /* Contact form einde */
-
 
   /* Media queries */
 
 @media screen and (max-width: 750px) and (min-width: 651px) {
-    .list li a {
-      font-size: 1.4rem;
-    }
   
     .list {
       height: 30%;
@@ -736,7 +679,7 @@ button:hover {
     }
   
     .list a {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
     }
 }
 
