--- a/Code/Css/blog.css
+++ b/Code/Css/blog.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 :root {
     --container-color: #1a1e21;
     --second-color: #fd8f44;
